@@ -7,6 +7,9 @@ apt (0.9.6.1) UNRELEASED; urgency=low
     - use PackageArchitectureMatchesSpecification filter
   * apt-pkg/cachefilter.cc:
     - add PackageArchitectureMatchesSpecification (Closes: #672603)
+  * apt-pkg/cacheset.cc:
+    - add PackageContainerInterface::FromGroup to support
+      architecture specifications with wildcards on the commandline
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 14 Jun 2012 15:45:13 +0200
 
